--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
   <body>
   <section class="section">
     <div class="table-container">
-        <h1 class="title is-size-2">Time:-13/02/2023</h1>
+        <h1 class="title is-size-2">Time:-13/02/2023 - 15/02/2023</h1>
         <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
             <thead>
-              <tr>
+              <tr has-text-weight-semibold>
                 <th>No.</th>
                 <th>Language</th>
                 <th>Program Name</th>
                 <th>Program Defination</th>
                 <th>Program Link</th>
-                <th>Help</abbr></th>
+                <th>Date</abbr></th>
                 <th>Spent Hours</th>
               </tr>
 
-              <tr>
+              <tr has-text-weight-semibold>
                 <th>1</th>
                 <td>Javascript</td>
                 <td>Tracking Task Application, Sum of Even from Fibonacci Sequence</td>
@@ -34,30 +34,30 @@
                   Even number which come from Fibonacci series less that 4000000.
                 </td>
                 <td><a href="https://surajbca.github.io/daily-task-tracker/" target="_blank">Task Tracker</a></td>
-                <td>0%</td>
+                <td>13/02/2023</td>
                 <td>6 Hr</td>
               </tr>
 
-               <tr>
+               <tr has-background-info-light>
                 <th>2</th>
                 <td>Javascript,bulma.css</td>
                 <td>learn bulma css, Sum of Even from Fibonacci Sequence and more...</td>
                 <td>Completed bulma css about Containers Columns Helpers classes Form Elements, Solve Program for Largest prime factor, Largest palindrome product, Smallest multiple</td>
                 <td><a href="" target="_blank">No Available</a></td>
-                <td>0%</td>
+                <td>14/02/2023</td>
                 <td>6 Hr</td>
               </tr>
-<!--
+
               <tr>
                 <th>3</th>
                 <td>Javascript</td>
-                <td>Basic Between Sum</td>
-                <td>Basic Between Sum Program(ex.startvalue + ....+Endvalue = sum)</td>
-                <td><a href="" target="_blank"></a>No Available</td>
-                <td>0%</td>
-                <td>30 Min</td>
+                <td>solve Problem program</td>
+                <td>solve program for Sum square difference, 10001st prime, Summation of primes </td>
+                <td><a href="" target="_blank">No Available</a></td>
+                <td>15/02/2023</td>
+                <td>6 Hr</td>
               </tr>
-
+<!--
               <tr>
                 <th>4</th>
                 <td>Javascript</td>
@@ -84,8 +84,8 @@
                 <th></th>
                 <th></th>
                 <th></th>
-                <th>0%</th>
-                <th class="is-size-4">12 Hr</th>
+                <th></th>
+                <th class="is-size-4">18 Hr</th>
               </tr>
             </thead>
         </table>
