--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-20/03/2023 </h1>
+      <h1 class="title is-size-2">Time:-20/03/2023 - 21/03/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -432,23 +432,25 @@
           <tr>
             <th>1</th>
             <td>Javascript, css</td>
-            <td>today working on margin padding </td>
-            <td>today working on margin padding and some UI optimization</td>
+            <td>today working on, gray mode, taxt color</td>
+            <td>today working on followers margin, icon color cantant color and some UI optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>20/03/2023</td>
+            <td>21/03/2023</td>
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>some UI optimization</td>
-            <td>margin padding and some UI optimization</td>
+            <td>today working on icon hide function, gray mode, taxt color</td>
+            <td>today working on live icon hide, url icon, date icon hide, followers margin, icon color cantant color
+              and some UI
+              optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
             <td>14/03/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript</td>
