--- a/index.html
+++ b/index.html
@@ -450,17 +450,17 @@
             <td>14/03/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
-            <td>javascript</td>
-            <td>today working on button,blue mode, gold mode, grey mode</td>
-            <td>today working on button,blue mode, gold mode, grey mode and some UI optimization</td>
+            <td>javascript Bulma</td>
+            <td>today learn bulma css and javascript</td>
+            <td>overview, customize, utilities, columns, Elements, components</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
             <td>15/03/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
