--- a/index.html
+++ b/index.html
@@ -460,17 +460,18 @@
             <td>22/03/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
-            <td>today working on button,icon,new cantant, javascript function</td>
-            <td>i am working on add new icon, new cantant, javascript function and some UI optimization</td>
+            <td>today working on dark mode, icon</td>
+            <td>i am working on dark mode date gray,black,white icon, maps gray,black,white icon, live
+              gray,black,whiteicon, javascript function and some UI optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>16/03/2023</td>
+            <td>17/03/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>Javascript</td>
@@ -488,7 +489,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hr</th>
+            <th class="is-size-4">24 Hr</th>
           </tr>
         </thead>
       </table>
