--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-20/03/2023 - 22/03/2023</h1>
+      <h1 class="title is-size-2">Time:-20/03/2023 - 24/03/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -467,20 +467,21 @@
             <td>today working on dark mode, icon</td>
             <td>i am working on dark mode date gray,black,white icon, maps gray,black,white icon, live
               gray,black,whiteicon, javascript function and some UI optimization</td>
-            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>17/03/2023</td>
+            <td><a href=" /" target="_blank">fake Twitter</a></td>
+            <td>23/03/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>Javascript</td>
-            <td>today working on ,icon,new cantant, javascript function</td>
-            <td>i am working on add government official cantent, grey icon, yellow icon and some UI optimization</td>
+            <td>today working on ,icon, text color, javascript function</td>
+            <td>i am working on date icon coloe and text color, link icon color and text color, maps icon color and text
+              color, followers text color, following text color, username text color and some UI optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>17/03/2023</td>
+            <td>24/03/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
 
           <tr>
             <th></th>
@@ -489,7 +490,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">24 Hr</th>
+            <th class="is-size-4">30 Hr</th>
           </tr>
         </thead>
       </table>
