--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <th>5</th>
             <td>Javascript</td>
             <td>today working on ,icon, text color, javascript function</td>
-            <td>i am working on date icon coloe and text color, link icon color and text color, maps icon color and text
+            <td>i am working on date icon color and text color, link icon color and text color, maps icon color and text
               color, followers text color, following text color, username text color and some UI optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
             <td>24/03/2023</td>
@@ -491,6 +491,168 @@
             <th></th>
             <th>Total</th>
             <th class="is-size-4">30 Hr</th>
+          </tr>
+        </thead>
+      </table>
+
+    </div>
+  </section>
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-13/03/2023 - 17/03/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>today working on margin padding </td>
+            <td>today working on margin padding and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>13/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>some UI optimization</td>
+            <td>margin padding and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>14/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>3</th>
+            <td>javascript</td>
+            <td>today working on button,blue mode, gold mode, grey mode</td>
+            <td>today working on button,blue mode, gold mode, grey mode and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>15/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>today working on button,icon,new cantant, javascript function</td>
+            <td>i am working on add new icon, new cantant, javascript function and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>16/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>5</th>
+            <td>Javascript</td>
+            <td>today working on ,icon,new cantant, javascript function</td>
+            <td>i am working on add government official cantent, grey icon, yellow icon and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>17/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">30 Hr</th>
+          </tr>
+        </thead>
+      </table>
+
+    </div>
+  </section>
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-28/03/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript, css</td>
+            <td>testing and some UI optimization</td>
+            <td>today working on testing and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>28/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!--<tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>today working on icon hide function, gray mode, taxt color</td>
+            <td>today working on live icon hide, url icon, date icon hide, followers margin, icon color cantant color
+              and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>14/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>3</th>
+            <td>javascript Bulma</td>
+            <td>today learn bulma css and javascript</td>
+            <td>overview, customize, utilities, columns, Elements, components</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>22/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>today working on dark mode, icon</td>
+            <td>i am working on dark mode date gray,black,white icon, maps gray,black,white icon, live
+              gray,black,whiteicon, javascript function and some UI optimization</td>
+            <td><a href=" /" target="_blank">fake Twitter</a></td>
+            <td>23/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>5</th>
+            <td>Javascript</td>
+            <td>today working on ,icon, text color, javascript function</td>
+            <td>i am working on date icon color and text color, link icon color and text color, maps icon color and text
+              color, followers text color, following text color, username text color and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>24/03/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hr</th>
           </tr>
         </thead>
       </table>
