--- a/index.html
+++ b/index.html
@@ -601,18 +601,19 @@
             <td>6 hr</td>
           </tr>
 
-          <!--<tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>today working on icon hide function, gray mode, taxt color</td>
-            <td>today working on live icon hide, url icon, date icon hide, followers margin, icon color cantant color
+            <td>today working on following button function, gray icon input value</td>
+            <td>today working on live icon hide, url icon, date icon hide, followers margin, following button function,
+              gray icon input value
               and some UI
               optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
             <td>14/03/2023</td>
             <td>6 hr</td>
           </tr>
-
+          <!--
           <tr>
             <th>3</th>
             <td>javascript Bulma</td>
