--- a/index.html
+++ b/index.html
@@ -610,20 +610,23 @@
               and some UI
               optimization</td>
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>14/03/2023</td>
-            <td>6 hr</td>
-          </tr>
-          <!--
-          <tr>
-            <th>3</th>
-            <td>javascript Bulma</td>
-            <td>today learn bulma css and javascript</td>
-            <td>overview, customize, utilities, columns, Elements, components</td>
-            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>22/03/2023</td>
+            <td>29/03/2023</td>
             <td>6 hr</td>
           </tr>
 
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td>today working on following button function, gray icon input value</td>
+            <td>today working on live icon hide, url icon, date icon hide, button function,
+              gray icon input value
+              and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>30/03/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
@@ -653,7 +656,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hr</th>
+            <th class="is-size-4">18 Hr</th>
           </tr>
         </thead>
       </table>
