--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-28/03/2023</h1>
+      <h1 class="title is-size-2">Time:-28/03/2023 - 31/03/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -626,18 +626,17 @@
             <td>30/03/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
-            <td>today working on dark mode, icon</td>
-            <td>i am working on dark mode date gray,black,white icon, maps gray,black,white icon, live
-              gray,black,whiteicon, javascript function and some UI optimization</td>
-            <td><a href=" /" target="_blank">fake Twitter</a></td>
-            <td>23/03/2023</td>
+            <td>today working on font family</td>
+            <td>i am working on all Twitter font family and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>31/03/2023</td>
             <td>6 hr</td>
           </tr>
-
+          <!--
           <tr>
             <th>5</th>
             <td>Javascript</td>
@@ -656,7 +655,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hr</th>
+            <th class="is-size-4">24 Hr</th>
           </tr>
         </thead>
       </table>
