--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             <td>31/03/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>Javascript</td>
@@ -646,7 +646,7 @@
             <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
             <td>24/03/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
 
           <tr>
             <th></th>
@@ -656,6 +656,92 @@
             <th></th>
             <th>Total</th>
             <th class="is-size-4">24 Hr</th>
+          </tr>
+        </thead>
+      </table>
+
+    </div>
+  </section>
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-03/04/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>font family change and some UI optimization</td>
+            <td>today working on font family change and some UI optimization .</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>03/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
+        <tr>
+          <th>2</th>
+          <td>Javascript</td>
+          <td>today working on following button function, gray icon input value</td>
+          <td>today working on live icon hide, url icon, date icon hide, followers margin, following button function,
+            gray icon input value
+            and some UI
+            optimization</td>
+          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+          <td>29/03/2023</td>
+          <td>6 hr</td>
+        </tr>
+
+        <tr>
+          <th>3</th>
+          <td>javascript </td>
+          <td>today working on following button function, gray icon input value</td>
+          <td>today working on live icon hide, url icon, date icon hide, button function,
+            gray icon input value
+            and some UI
+            optimization</td>
+          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+          <td>30/03/2023</td>
+          <td>6 hr</td>
+        </tr>
+
+        <tr>
+          <th>4</th>
+          <td>Javascript</td>
+          <td>today working on font family</td>
+          <td>i am working on all Twitter font family and some UI optimization</td>
+          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+          <td>31/03/2023</td>
+          <td>6 hr</td>
+        </tr>
+
+        <tr>
+          <th>5</th>
+          <td>Javascript</td>
+          <td>today working on ,icon, text color, javascript function</td>
+          <td>i am working on date icon color and text color, link icon color and text color, maps icon color and text
+            color, followers text color, following text color, username text color and some UI optimization</td>
+          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+          <td>24/03/2023</td>
+          <td>6 hr</td>
+        </tr>-->
+
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hr</th>
           </tr>
         </thead>
       </table>
