--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-03/04/2023</h1>
+      <h1 class="title is-size-2">Time:-03/04/2023 - 04/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -686,20 +686,17 @@
             <td>03/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
-        <tr>
-          <th>2</th>
-          <td>Javascript</td>
-          <td>today working on following button function, gray icon input value</td>
-          <td>today working on live icon hide, url icon, date icon hide, followers margin, following button function,
-            gray icon input value
-            and some UI
-            optimization</td>
-          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-          <td>29/03/2023</td>
-          <td>6 hr</td>
-        </tr>
 
+          <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>font family change and some UI optimization</td>
+            <td>today working on font family change and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>04/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
         <tr>
           <th>3</th>
           <td>javascript </td>
@@ -741,7 +738,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hr</th>
+            <th class="is-size-4">12 Hr</th>
           </tr>
         </thead>
       </table>
