--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-03/04/2023 - 04/04/2023</h1>
+      <h1 class="title is-size-2">Time:-03/04/2023 - 05/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -696,20 +696,17 @@
             <td>04/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
-        <tr>
-          <th>3</th>
-          <td>javascript </td>
-          <td>today working on following button function, gray icon input value</td>
-          <td>today working on live icon hide, url icon, date icon hide, button function,
-            gray icon input value
-            and some UI
-            optimization</td>
-          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-          <td>30/03/2023</td>
-          <td>6 hr</td>
-        </tr>
 
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td>today learn reaflow</td>
+            <td>introduction, getting started, utils, advanced, helpers, community, contributing</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>5/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
         <tr>
           <th>4</th>
           <td>Javascript</td>
@@ -738,7 +735,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hr</th>
+            <th class="is-size-4">18 Hr</th>
           </tr>
         </thead>
       </table>
