--- a/index.html
+++ b/index.html
@@ -706,17 +706,17 @@
             <td>5/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
-        <tr>
-          <th>4</th>
-          <td>Javascript</td>
-          <td>today working on font family</td>
-          <td>i am working on all Twitter font family and some UI optimization</td>
-          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-          <td>31/03/2023</td>
-          <td>6 hr</td>
-        </tr>
 
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>today working on navbar</td>
+            <td>i am working on navbar and logo</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>6/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
         <tr>
           <th>5</th>
           <td>Javascript</td>
@@ -735,7 +735,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hr</th>
+            <th class="is-size-4">24 Hr</th>
           </tr>
         </thead>
       </table>
