--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-03/04/2023 - 05/04/2023</h1>
+      <h1 class="title is-size-2">Time:-03/04/2023 - 07/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -716,17 +716,17 @@
             <td>6/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
-        <tr>
-          <th>5</th>
-          <td>Javascript</td>
-          <td>today working on ,icon, text color, javascript function</td>
-          <td>i am working on date icon color and text color, link icon color and text color, maps icon color and text
-            color, followers text color, following text color, username text color and some UI optimization</td>
-          <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-          <td>24/03/2023</td>
-          <td>6 hr</td>
-        </tr>-->
+
+          <tr>
+            <th>5</th>
+            <td>html, css</td>
+            <td>today working on Blobmaker web</td>
+            <td>logo, share icon, input color, download button and icon, email input type box, contact number, footer
+            </td>
+            <td><a href="" target="_blank">no link</a></td>
+            <td>07/04/2023</td>
+            <td>6 hr</td>
+          </tr>
 
           <tr>
             <th></th>
@@ -735,7 +735,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">24 Hr</th>
+            <th class="is-size-4">30 Hr</th>
           </tr>
         </thead>
       </table>
