--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-13/02/2023 - 17/02/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -96,7 +96,7 @@
   </section>
 
   <!--this is second week-->
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-20/02/2023 - 24/02/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -174,9 +174,9 @@
       </table>
 
     </div>
-  </section>
+  </section>-->
   <!--this is third week-->
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-27/02/2023 - 3/03/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -254,9 +254,9 @@
       </table>
 
     </div>
-  </section>
+  </section>-->
   <!--this is last week-->
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-6/03/2023 - 10/03/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -661,7 +661,7 @@
       </table>
 
     </div>
-  </section>
+  </section>-->
   <section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-03/04/2023 - 07/04/2023</h1>
@@ -736,6 +736,87 @@
             <th></th>
             <th>Total</th>
             <th class="is-size-4">30 Hr</th>
+          </tr>
+        </thead>
+      </table>
+
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-10/04/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>today working on Blobmaker web</td>
+            <td>today working on navbar, product of the day imgage and some UI optimization .</td>
+            <td><a href="" target="_blank">No link</a></td>
+            <td>10/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!-- <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>font family change and some UI optimization</td>
+            <td>today working on font family change and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>04/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td>today learn reaflow</td>
+            <td>introduction, getting started, utils, advanced, helpers, community, contributing</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>5/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>today working on navbar</td>
+            <td>i am working on navbar and logo</td>
+            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
+            <td>6/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css</td>
+            <td>today working on Blobmaker web</td>
+            <td>logo, share icon, input color, download button and icon, email input type box, contact number, footer
+            </td>
+            <td><a href="" target="_blank">no link</a></td>
+            <td>07/04/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hr</th>
           </tr>
         </thead>
       </table>
