--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-10/04/2023</h1>
+      <h1 class="title is-size-2">Time:-10/04/2023 - 11/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -762,22 +762,22 @@
             <th>1</th>
             <td>Javascript</td>
             <td>today working on Blobmaker web</td>
-            <td>today working on navbar, product of the day imgage and some UI optimization .</td>
+            <td>today working on navbar, product of the day image and some UI optimization .</td>
             <td><a href="" target="_blank">No link</a></td>
             <td>10/04/2023</td>
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
             <td>font family change and some UI optimization</td>
             <td>today working on font family change and some UI optimization</td>
-            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>04/04/2023</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>11/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript </td>
@@ -816,7 +816,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hr</th>
+            <th class="is-size-4">12 Hr</th>
           </tr>
         </thead>
       </table>
