--- a/index.html
+++ b/index.html
@@ -771,33 +771,33 @@
           <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>font family change and some UI optimization</td>
+            <td>today working on Blobmaker web</td>
             <td>today working on font family change and some UI optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
             <td>11/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
-            <td>today learn reaflow</td>
+            <td>today working on Blobmaker web</td>
             <td>introduction, getting started, utils, advanced, helpers, community, contributing</td>
-            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>5/04/2023</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>12/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
             <td>today working on navbar</td>
-            <td>i am working on navbar and logo</td>
-            <td><a href="https://surajbca.github.io/fake-twitter-generator/" target="_blank">fake Twitter</a></td>
-            <td>6/04/2023</td>
+            <td>today working on font family change and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>13/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css</td>
