--- a/index.html
+++ b/index.html
@@ -797,17 +797,17 @@
             <td>13/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
-            <td>html, css</td>
-            <td>today working on Blobmaker web</td>
-            <td>logo, share icon, input color, download button and icon, email input type box, contact number, footer
-            </td>
-            <td><a href="" target="_blank">no link</a></td>
-            <td>07/04/2023</td>
+            <td>html, css, javascript</td>
+            <td> working on Blobmaker web</td>
+            <td>today working on onclick and show button, differet-different button color , download svg img and some UI
+              design</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>14/04/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
 
           <tr>
             <th></th>
@@ -816,7 +816,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hr</th>
+            <th class="is-size-4">30 Hr</th>
           </tr>
         </thead>
       </table>
