--- a/index.html
+++ b/index.html
@@ -802,13 +802,13 @@
             <th>5</th>
             <td>html, css, javascript</td>
             <td> working on Blobmaker web</td>
-            <td>today working on onclick and show button, differet-different button color , download svg img and some UI
-              design</td>
+            <td> working on onclick and show button, different-different button color , download svg img and some UI
+              optimization
+            </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
             <td>14/04/2023</td>
             <td>6 hr</td>
           </tr>
-
           <tr>
             <th></th>
             <th></th>
@@ -820,11 +820,89 @@
           </tr>
         </thead>
       </table>
-
     </div>
   </section>
 
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-10/04/2023 </h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
 
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>today working on Blobmaker web</td>
+            <td>working on svg color different-different button color , download svg img and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
+            <td>10/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!-- <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>today working on Blobmaker web</td>
+            <td>today working on font family change and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>11/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td>today working on Blobmaker web</td>
+            <td>introduction, getting started, utils, advanced, helpers, community, contributing</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>12/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>today working on navbar</td>
+            <td>today working on font family change and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>13/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td> working on Blobmaker web</td>
+            <td> working on onclick and show button, different-different button color , download svg img and some UI
+              optimization
+            </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>14/04/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hr</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>
 </body>
 
 </html>
