--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-10/04/2023 </h1>
+      <h1 class="title is-size-2">Time:-17/04/2023 - 18/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -845,20 +845,21 @@
             <td>working on svg color different-different button color , download svg img and some UI
               optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
-            <td>10/04/2023</td>
+            <td>17/04/2023</td>
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>today working on Blobmaker web</td>
-            <td>today working on font family change and some UI optimization</td>
+            <td>SVG Tutorial</td>
+            <td>today learning polygon, polyline, path, text, Stroke Properties, SVG Filters, SVG Blur Effects, SVG Drop
+              Shadows, SVG Gradients - Linear, Radial</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>11/04/2023</td>
+            <td>18/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript </td>
