--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-17/04/2023 - 18/04/2023</h1>
+      <h1 class="title is-size-2">Time:-17/04/2023 - 19/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -859,17 +859,17 @@
             <td>18/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
-            <td>today working on Blobmaker web</td>
-            <td>introduction, getting started, utils, advanced, helpers, community, contributing</td>
+            <td> working on Blobmaker web</td>
+            <td>today working all svg color change , svg code copy function and some UI optimization </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>12/04/2023</td>
+            <td>19/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
