--- a/index.html
+++ b/index.html
@@ -869,17 +869,17 @@
             <td>19/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
-            <td>today working on navbar</td>
-            <td>today working on font family change and some UI optimization</td>
+            <td>working on Blobmaker web</td>
+            <td>today working on to generate random svg shape and some UI optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>13/04/2023</td>
+            <td>20/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
