--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-17/04/2023 - 20/04/2023</h1>
+      <h1 class="title is-size-2">Time:-17/04/2023 - 21/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -879,18 +879,17 @@
             <td>20/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
             <td> working on Blobmaker web</td>
-            <td> working on onclick and show button, different-different button color , download svg img and some UI
-              optimization
+            <td> today working on to generate random svg shape gunction, svg code copy function and some UI optimization
             </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
             <td>14/04/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
           <tr>
             <th></th>
             <th></th>
@@ -898,7 +897,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">24 Hr</th>
+            <th class="is-size-4">30 Hr</th>
           </tr>
         </thead>
       </table>
