--- a/index.html
+++ b/index.html
@@ -884,10 +884,10 @@
             <th>5</th>
             <td>html, css, javascript</td>
             <td> working on Blobmaker web</td>
-            <td> today working on to generate random svg shape gunction, svg code copy function and some UI optimization
+            <td> today working on to generate random svg shape function, svg code copy function and some UI optimization
             </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>14/04/2023</td>
+            <td>21/04/2023</td>
             <td>6 hr</td>
           </tr>
           <tr>
