--- a/index.html
+++ b/index.html
@@ -903,6 +903,87 @@
       </table>
     </div>
   </section>
+
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-24/04/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>today working on Blobmaker web</td>
+            <td>working on input type, svg icon margin padding , download icon, copy code ican and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
+            <td>24/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!-- <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>SVG Tutorial</td>
+            <td>today learning polygon, polyline, path, text, Stroke Properties, SVG Filters, SVG Blur Effects, SVG Drop
+              Shadows, SVG Gradients - Linear, Radial</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>18/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on Blobmaker web</td>
+            <td>today working all svg color change , svg code copy function and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>19/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>working on Blobmaker web</td>
+            <td>today working on to generate random svg shape and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>20/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td> working on Blobmaker web</td>
+            <td> today working on to generate random svg shape function, svg code copy function and some UI optimization
+            </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>21/04/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hr</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>
 </body>
 
 </html>
