--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
           <tr>
             <th>1</th>
             <td>Javascript</td>
-            <td>today working on Blobmaker web</td>
+            <td>working on Blobmaker web</td>
             <td>working on input type, svg icon margin padding , download icon, copy code ican and some UI
               optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
@@ -930,18 +930,18 @@
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>SVG Tutorial</td>
-            <td>today learning polygon, polyline, path, text, Stroke Properties, SVG Filters, SVG Blur Effects, SVG Drop
-              Shadows, SVG Gradients - Linear, Radial</td>
+            <td>working on Blobmaker web</td>
+            <td>today working on input type, color button, svg icon margin, padding, javascript function and some UI
+              optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>18/04/2023</td>
+            <td>25/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
-          <tr>
+
+          <!-- <tr>
             <th>3</th>
             <td>javascript </td>
             <td> working on Blobmaker web</td>
@@ -978,7 +978,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hr</th>
+            <th class="is-size-4">12 Hr</th>
           </tr>
         </thead>
       </table>
